fix(mini-job-summary): remove extra margin

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,8 @@
-
-
 .container {
     display: grid;
     height: 100%;
     grid-gap: 0 var(--spacers-dp24);
-    grid-template-columns: [sidebar] 280px [content] 1fr;
+    grid-template-columns: [sidebar] 280px [content] minmax(0, 1fr);
     background-color: var(--colors-grey050);
     color: var(--colors-grey900);
 }
